Работа с фоном и исправлния

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
         </nav>
         <ul class="site-cont list">
           <li class="item">
-            <a class="link" href="mailto:info@devstudio.com"
+              <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
@@ -46,7 +46,7 @@
       <section class="section works">
         <div class="container">
           <!-- заголовок потом скрыть -->
-          <h1 class="hide-head">Наши работы</h1>
+          <h1 class="hide-title">Наши работы</h1>
           <!-- Кнопки фильтра проектов-->
           <div class="box-button">
             <ul class="filtr-btn list">
