Исправлены ошибки по валидатору

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
         </nav>
         <ul class="site-cont list">
           <li class="item">
-              <a class="link" href="mailto:info@devstudio.com"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
@@ -79,8 +79,9 @@
                     width="370"
                   />
                   <div class="content">
-                  <h2 class="project-title">Технокряк</h2>
-                  <p class="projects-desk">Веб-сайт</p></div></a
+                    <h2 class="project-title">Технокряк</h2>
+                    <p class="projects-desk">Веб-сайт</p>
+                  </div></a
                 >
               </li>
               <li class="project-item">
@@ -90,11 +91,13 @@
                     src="./images/portfolio/2poster.jpg"
                     alt="баскетболисты в прижке"
                     width="370"
-                  /><div class="content">
-                  <h2 class="project-title">
-                    Постер <span lang="en">New Orlean vs Golden Star</span>
-                  </h2>
-                  <p class="projects-desk" lang="en">Дизайн</p></div></a
+                  />
+                  <div class="content">
+                    <h2 class="project-title">
+                      Постер <span lang="en">New Orlean vs Golden Star</span>
+                    </h2>
+                    <p class="projects-desk" lang="en">Дизайн</p>
+                  </div></a
                 >
               </li>
               <li class="project-item">
@@ -104,11 +107,13 @@
                     src="./images/portfolio/3restorant.jpg"
                     alt="логотип ресторана"
                     width="370"
-                  /><div class="content">
-                  <h2 class="project-title">
-                    Ресторан <span lang="en">Seafood</span>
-                  </h2>
-                  <p class="projects-desk">Приложение</p</div></a
+                  />
+                  <div class="content">
+                    <h2 class="project-title">
+                      Ресторан <span lang="en">Seafood</span>
+                    </h2>
+                    <p class="projects-desk">Приложение</p>
+                  </div></a
                 >
               </li>
               <li class="project-item">
@@ -118,11 +123,13 @@
                     src="./images/portfolio/4project-prime.jpg"
                     alt="наушники"
                     width="370"
-                  /><div class="content">
-                  <h2 class="project-title">
-                    Проект <span lang="en">Prime</span>
-                  </h2>
-                  <p class="projects-desk">Маркетинг</p></div></a
+                  />
+                  <div class="content">
+                    <h2 class="project-title">
+                      Проект <span lang="en">Prime</span>
+                    </h2>
+                    <p class="projects-desk">Маркетинг</p>
+                  </div></a
                 >
               </li>
               <li class="project-item">
@@ -132,11 +139,13 @@
                     src="./images/portfolio/5project-boxes.jpg"
                     alt="маленькие коробочки"
                     width="370"
-                  /><div class="content">
-                  <h2 class="project-title">
-                    Проект <span lang="en">Boxes</span>
-                  </h2>
-                  <p class="projects-desk">Веб-сайт</p></div></a
+                  />
+                  <div class="content">
+                    <h2 class="project-title">
+                      Проект <span lang="en">Boxes</span>
+                    </h2>
+                    <p class="projects-desk">Веб-сайт</p>
+                  </div></a
                 >
               </li>
               <li class="project-item">
@@ -146,11 +155,13 @@
                     src="./images/portfolio/6no-borders.jpg"
                     alt="монитор"
                     width="370"
-                  /><div class="content">
-                  <h2 class="project-title" lang="en">
-                    Inspiration has no Borders
-                  </h2>
-                  <p class="projects-desk">Веб-сайт</p></div></a
+                  />
+                  <div class="content">
+                    <h2 class="project-title" lang="en">
+                      Inspiration has no Borders
+                    </h2>
+                    <p class="projects-desk">Веб-сайт</p>
+                  </div></a
                 >
               </li>
               <li class="project-item">
@@ -160,11 +171,13 @@
                     src="./images/portfolio/7limited-edition.jpg"
                     alt="развернутый журнал"
                     width="370"
-                  /><div class="content">
-                  <h2 class="project-title">
-                    Издание <span lang="en">Limited Edition</span>
-                  </h2>
-                  <p class="projects-desk">Дизайн</p></div></a
+                  />
+                  <div class="content">
+                    <h2 class="project-title">
+                      Издание <span lang="en">Limited Edition</span>
+                    </h2>
+                    <p class="projects-desk">Дизайн</p>
+                  </div></a
                 >
               </li>
               <li class="project-item">
@@ -174,11 +187,13 @@
                     src="./images/portfolio/8project-lab.jpg"
                     alt="бирка"
                     width="370"
-                  /><div class="content">
-                  <h2 class="project-title">
-                    Проект <span lang="en">LAB</span>
-                  </h2>
-                  <p class="projects-desk">Маркетинг</p></div></a
+                  />
+                  <div class="content">
+                    <h2 class="project-title">
+                      Проект <span lang="en">LAB</span>
+                    </h2>
+                    <p class="projects-desk">Маркетинг</p>
+                  </div></a
                 >
               </li>
               <li class="project-item">
@@ -188,12 +203,13 @@
                     src="./images/portfolio/9growing-business.jpg"
                     alt="человек печатает"
                     width="370"
-                  /><div class="content">
-                  <h2 class="project-title" lang="en">Growing Business</h2>
-                  <p class="projects-desk">Приложение</p></div></a
+                  />
+                  <div class="content">
+                    <h2 class="project-title" lang="en">Growing Business</h2>
+                    <p class="projects-desk">Приложение</p>
+                  </div></a
                 >
               </li>
-              
             </ul>
           </div>
         </div>
@@ -222,10 +238,10 @@
               >
             </li>
             <li>
-              <a class="footer-item" href="tel:+38 099 111 11 11"
+              <a class="footer-item" href="tel:+38-099-111-11-11"
                 >+38 099 111 11 11</a
               >
-             </li>
+            </li>
           </ul>
         </address>
       </div>
