--- a/portfolio.html
+++ b/portfolio.html
@@ -46,27 +46,25 @@
       <section class="section works">
         <div class="container">
           <!-- заголовок потом скрыть -->
-          <h1 class="hide-title">Наши работы</h1>
+          <h1 class="hide-head">Наши работы</h1>
           <!-- Кнопки фильтра проектов-->
-          <div class="box-button">
-            <ul class="filtr-btn list">
-              <li class="button-list">
-                <button type="button" class="button">Все</button>
-              </li>
-              <li class="button-list">
-                <button type="button" class="button">Веб-сайты</button>
-              </li>
-              <li class="button-list">
-                <button type="button" class="button">Приложения</button>
-              </li>
-              <li class="button-list">
-                <button type="button" class="button">Дизайн</button>
-              </li>
-              <li class="button-list">
-                <button type="button" class="button">Маркетинг</button>
-              </li>
-            </ul>
-          </div>
+          <ul class="filtr-btn list">
+            <li class="button-list">
+              <button type="button" class="button">Все</button>
+            </li>
+            <li class="button-list">
+              <button type="button" class="button">Веб-сайты</button>
+            </li>
+            <li class="button-list">
+              <button type="button" class="button">Приложения</button>
+            </li>
+            <li class="button-list">
+              <button type="button" class="button">Дизайн</button>
+            </li>
+            <li class="button-list">
+              <button type="button" class="button">Маркетинг</button>
+            </li>
+          </ul>
           <!-- Проекты -->
           <div class="box-projects">
             <ul class="projects list">
@@ -217,33 +215,68 @@
     </main>
     <!-- футер -->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer logo" href="./index.html"
-          ><span class="logo-blue logo">Web</span>Studio</a
-        >
-        <address class="">
-          <ul class="footer-text list">
-            <li>
-              <a
-                class="adress footer-item"
-                href="https://goo.gl/maps/YtgKxtTX7qy2pB3RA"
-                target="_blank"
-                rel="noopener nofollow noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+      <div class="container footer-box">
+        <div class="footer-adres-box">
+          <a class="logo-footer logo" href="./index.html"
+            ><span class="logo-blue logo">Web</span>Studio</a
+          >
+          <address class="">
+            <ul class="footer-text list">
+              <li class="footer-item">
+                <a
+                  class="adress footer-link"
+                  href="https://goo.gl/maps/YtgKxtTX7qy2pB3RA"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-link" href="tel:+38-099-111-11-11"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-socials-box">
+          <h3 class="footer-title">присоединяйтесь</h3>
+          <ul class="footer-socials">
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link">
+                <svg class="footer-socials-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#instagram-2"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="footer-item" href="mailto:info@example.com"
-                >info@example.com</a
-              >
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link">
+                <svg class="footer-socials-icon" width="16px" height="20px">
+                  <use href="./images/icons.svg#twitter-1"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="footer-item" href="tel:+38-099-111-11-11"
-                >+38 099 111 11 11</a
-              >
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link">
+                <svg class="footer-socials-icon" width="15px" height="25px">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link">
+                <svg class="footer-socials-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
