Настроены hover для svg

--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
         <ul class="site-cont list">
           <li class="item">
             <!-- <div class="header-mail"> -->
-            <a class="header-mail link" href="mailto:info@devstudio.com"
+            <a class="header-contacts link" href="mailto:info@devstudio.com"
               ><svg class="header-icon" width="16px" height="12px">
                 <use href="./images/icons.svg#envelope-1"></use>
               </svg>
-              info@devstudio.com</a
-            >
+              <span>info@devstudio.com</span>
+            </a>
             <!-- </div> -->
           </li>
           <li class="item">
             <!-- <div class=""> -->
-            <a class="header-tel link" href="tel:+38-096-111-11-11"
+            <a class="header-contacts link" href="tel:+38-096-111-11-11"
               ><svg class="header-icon" width="10px" height="16px">
                 <use href="./images/icons.svg#Vector"></use>
               </svg>
-              +38 096 111 11 11</a
+              <span>+38 096 111 11 11</span></a
             >
           </li>
         </ul>
@@ -189,8 +189,8 @@
                   </li>
                   <li class="team-item">
                     <a class="team-link" href="">
-                      <svg class="team-icon" width="15px" height="25px">
-                        <use href="./images/icons.svg#facebook"></use>
+                      <svg class="team-icon" width="18px" height="30px">
+                        <use href="./images/icons.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -231,8 +231,8 @@
                   </li>
                   <li class="team-item">
                     <a class="team-link" href="">
-                      <svg class="team-icon" width="15px" height="25px">
-                        <use href="./images/icons.svg#facebook"></use>
+                      <svg class="team-icon" width="18px" height="30px">
+                        <use href="./images/icons.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -273,8 +273,8 @@
                   </li>
                   <li class="team-item">
                     <a class="team-link" href="">
-                      <svg class="team-icon" width="15px" height="25px">
-                        <use href="./images/icons.svg#facebook"></use>
+                      <svg class="team-icon" width="18px" height="30px">
+                        <use href="./images/icons.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -315,8 +315,8 @@
                   </li>
                   <li class="team-item">
                     <a class="team-link" href="">
-                      <svg class="team-icon" width="15px" height="25px">
-                        <use href="./images/icons.svg#facebook"></use>
+                      <svg class="team-icon" width="18px" height="30px">
+                        <use href="./images/icons.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -333,48 +333,49 @@
           </ul>
         </div>
       </section>
+      <!-- Постоянные клиенты -->
       <section class="section">
         <h2 class="section-title">Постоянные клиенты</h2>
         <ul class="clients list">
           <li class="cliets-list">
             <a href="" class="clients-link">
               <svg class="clients-pic" width="106px" height="60px">
-                <use href="./images/icons.svg#Logo1"></use>
+                <use href="./images/icons.svg#logo1"></use>
               </svg>
             </a>
           </li>
           <li class="cliets-list">
             <a href="" class="clients-link">
               <svg class="clients-pic" width="106px" height="60px">
-                <use href="./images/icons.svg#Logo2"></use>
+                <use href="./images/icons.svg#logo2"></use>
               </svg>
             </a>
           </li>
           <li class="cliets-list">
             <a href="" class="clients-link">
               <svg class="clients-pic" width="106px" height="60px">
-                <use href="./images/icons.svg#Logo3"></use>
+                <use href="./images/icons.svg#logo3"></use>
               </svg>
             </a>
           </li>
           <li class="cliets-list">
             <a href="" class="clients-link">
               <svg class="clients-pic" width="106px" height="60px">
-                <use href="./images/icons.svg#Logo4"></use>
+                <use href="./images/icons.svg#logo4"></use>
               </svg>
             </a>
           </li>
           <li class="cliets-list">
             <a href="" class="clients-link">
               <svg class="clients-pic" width="106px" height="60px">
-                <use href="./images/icons.svg#Logo5"></use>
+                <use href="./images/icons.svg#logo5"></use>
               </svg>
             </a>
           </li>
           <li class="cliets-list">
             <a href="" class="clients-link">
               <svg class="clients-pic" width="106px" height="60px">
-                <use href="./images/icons.svg#Logo6"></use>
+                <use href="./images/icons.svg#logo6"></use>
               </svg>
             </a>
           </li>
@@ -432,7 +433,7 @@
             <li class="footer-socials-item">
               <a href="" class="footer-socials-link">
                 <svg class="footer-socials-icon" width="15px" height="25px">
-                  <use href="./images/icons.svg#facebook"></use>
+                  <use href="./images/icons.svg#facebook-1"></use>
                 </svg>
               </a>
             </li>
