--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           </ul>
         </div>
       </section>
-      <!-- Постоянные клиенты -->
+      <!-- Постоянные клиенты компании-->
       <section class="section">
         <h2 class="section-title">Постоянные клиенты</h2>
         <ul class="clients list">
