--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!-- <div class=""> -->
             <a class="header-contacts link" href="tel:+38-096-111-11-11"
               ><svg class="header-icon" width="10px" height="16px">
-                <use href="./images/icons.svg#Vector"></use>
+                <use href="./images/icons.svg#vector"></use>
               </svg>
               <span>+38 096 111 11 11</span></a
             >
